# MyTradingView

./: .gitignore  CMakeLists.txt  README.md  main.cpp
resources/: FinnhubAPI
src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/api/: apiclient.cpp  apiclient.h
src/chart/: CustomChartView.cpp  CustomChartView.h  candlestickplotter.cpp  candlestickplotter.h  chartmanager.cpp  chartmanager.h
src/data/: Symbol.cpp  Symbol.h  filemanager.cpp  filemanager.h  ohlcdata.cpp  ohlcdata.h  symbolslists.cpp  symbolslists.h
